worked on modals, and main page

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,6 +1,8 @@
 .about-container {
   display: flex;
   align-items: center;
+  justify-content: center;
+  margin-top: 80px;
 }
 .about__author {
   width: 250px;
