--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,7 +5,7 @@
 
 .page__content {
   min-height: 100vh;
-  max-width: 1360px;
+  max-width: 100vw;
   margin: 0;
   padding: 0 40px;
   text-decoration: none;
