--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 25px 0;
+  margin: 25px 0 80px;
   padding: 0;
   font-family: "Cabinet Grotesk", Arial, sans-serif;
   font-size: 20px;
