--- a/src/components/RecipeModal/RecipeModal.css
+++ b/src/components/RecipeModal/RecipeModal.css
@@ -1,16 +1,39 @@
+.modal__container {
+  margin-bottom: 18px;
+}
 .modal__content_type_image {
   margin: 0;
   padding: 0;
+  max-width: 430px;
 }
 
 .modal__image {
-  max-width: 100vw;
-  max-height: 100vh;
+  width: 100%;
+  height: 100%;
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
   padding: 0;
 }
 
-.modal__caption {
+.modal__footer {
   margin-left: 18px;
+  margin-right: 18px;
+  max-width: 100%;
+}
+
+.modal__caption {
+  margin: 18px 0;
+}
+
+.modal__subheading {
+  margin: 18px 0;
+}
+
+.modal__link {
+  padding: 0;
+  margin-left: 18px;
+}
+
+.modal__link:hover {
+  color: #2f71e5;
 }
