--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,15 +3,77 @@
   align-items: center;
   justify-content: center;
   margin-top: 80px;
+  padding: 0 20px;
+  flex-wrap: wrap;
 }
+
 .about__author {
   width: 250px;
   height: 250px;
   border-radius: 50%;
-  margin-left: 104px;
+  margin-left: 40px;
 }
 
 .about__bio {
   width: 600px;
   margin-left: 60px;
+  text-align: left;
+}
+
+.about__title {
+  font-size: 1.8rem;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 1024px) {
+  .about__author {
+    width: 200px;
+    height: 200px;
+    margin-left: 20px;
+  }
+
+  .about__bio {
+    width: 80%;
+    margin-left: 0;
+    text-align: center;
+  }
+
+  .about__title {
+    font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .about-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about__author {
+    margin: 0 0 20px 0;
+  }
+
+  .about__bio {
+    width: 90%;
+    text-align: center;
+  }
+
+  .about__title {
+    font-size: 1.4rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .about__author {
+    width: 150px;
+    height: 150px;
+  }
+
+  .about__title {
+    font-size: 1.2rem;
+  }
+
+  .about__bio p {
+    font-size: 0.9rem;
+  }
 }
