--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,3 +10,21 @@
   padding: 0 80px;
   text-decoration: none;
 }
+
+@media (max-width: 1024px) {
+  .page__content {
+    padding: 0 40px;
+  }
+}
+
+@media (max-width: 768px) {
+  .page__content {
+    padding: 0 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .page__content {
+    padding: 0 10px;
+  }
+}
